--- a/assets/admin.scss
+++ b/assets/admin.scss
@@ -1,7 +1,2 @@
-.breadcrumbs {
-    width: 100% !important;
-}
-
-section.content-header {
-    flex-wrap: wrap;
-}
+@import './sass/admin/custom';
+@import './sass/admin/ckeditor_simplebox';
