Updated project show page and added features

--- a/assets/content.scss
+++ b/assets/content.scss
@@ -1,4 +1,7 @@
 @import './sass/variables';
 
 @import './sass/counter-skills';
+@import './sass/shortcodes/image_scroll_hover';
+
+// code highlight
 @import 'highlight.js/scss/atom-one-dark.scss';
