--- a/templates/_elements/project_gallery_slider.html.twig
+++ b/templates/_elements/project_gallery_slider.html.twig
@@ -7,13 +7,11 @@
     {% set autoplay = false %}
     {% set showArrows = true %}
     {% set showPagination = true %}
-    {% set smoothHeight = false %}
+    {% set smoothHeight = true %}
 
-    {% set sliderShowMainImage = false %}
+    {% set sliderShowThumbnail = false %}
     {% set autoplayDelay = 6000 %}
     {% set slideSpeed = 500 %}
-    {% set sliderHeight = '70vh' %}
-    {% set sliderMaxHeight = '600px' %}
 
 
 
@@ -26,14 +24,14 @@
 
 {# Project Gallery Slider ======================================================== #}
 
-<div class="fslider project-show" data-smooth-height={{ smoothHeight }} data-slideshow={{ autoplay }} data-pagi={{ showPagination }} data-arrows={{ showArrows }} data-pause={{ autoplayDelay }} data-speed={{ slideSpeed }}>
+<div class="fslider shadow project-show" data-smooth-height={{ smoothHeight }} data-slideshow={{ autoplay }} data-pagi={{ showPagination }} data-arrows={{ showArrows }} data-pause={{ autoplayDelay }} data-speed={{ slideSpeed }}>
     <div class="flexslider">
-        <div class="slider-wrap scroll-hover-container" style="height:1000px">
+        <div class="slider-wrap scroll-hover-container">
 
             {# mainImage slide #}
-            {% if sliderShowMainImage %}
+            {% if sliderShowThumbnail %}
                 <div class="slide shadow scroll-hover-img">
-                    <img src="{{ uploadUrl('UPLOADS_PROJECTS', project.mainImage) }}" alt="Image of project: {{ project.title }}">
+                    <img src="{{ uploadUrl('UPLOADS_PROJECTS_THUMB', project.thumbnail) }}" alt="Image of project: {{ project.title }}">
                 </div>
             {% endif %}
 
@@ -42,17 +40,17 @@
 
                 {% set isVideo = file('getMime', item.item) is same as(file('VIDEO_TYPE')) ? true : false %}
 
-                <div class="slide shadow{{ isVideo ? " slider-element" }} scroll-hover-img">
+                <div class="slide{{ isVideo ? " slider-element" }} scroll-hover-img">
                         		
                     {% if isVideo %}
 
-                        <video poster="{{ uploadUrl('UPLOADS_PROJECTS', project.mainImage) }}" preload="auto" loop autoplay muted>
-                            <source src='{{ uploadUrl('UPLOADS_PROJECTS', item.item) }}' type='video/mp4' />
+                        <video preload="auto" loop autoplay muted>
+                            <source src='{{ uploadUrl('UPLOADS_PROJECTS_LIB', item.item) }}' type='video/mp4' />
                         </video>
                        
                     {% else %} 
 
-                        <img src="{{ uploadUrl('UPLOADS_PROJECTS', item.item) }}" alt="Image n.{{ i }} of project: {{ project.title }}">
+                        <img src="{{ uploadUrl('UPLOADS_PROJECTS_LIB', item.item) }}" alt="Image n.{{ i }} of project: {{ project.title }}">
                     
                     {% endif %}
 
