--- a/templates/_elements/projects-carousel.html.twig
+++ b/templates/_elements/projects-carousel.html.twig
@@ -7,7 +7,7 @@
         - showCategories: <bool>
         - zoomIcon: <string> Icon to open lightbox onClick
         - viewProjectIcon: <string> Icon to redirect to project onClick
-        - defaultMainImage: <string> Default image name in case the project mainImage is missing
+        - defaultThumbnail: <string> Default image name in case the project thumbnail is missing
         - cols <int> NUmber of columns. Default: 4
 
 #}
@@ -17,7 +17,7 @@
     {% set showCategories = false %}
     {% set zoomIcon = 'icon-line-zoom-in' %}
     {% set viewProjectIcon = 'icon-line-eye' %}
-    {% set defaultMainImage = 'placeholder.png' %}
+    {% set defaultThumbnail = 'placeholder.png' %}
 
 {# Prepare #}
 
@@ -30,9 +30,9 @@
     {% for project in projects %}
 
         {% set projectUrl = path('project_show', {id: project.id, slug: project.slug}) %}
-        {% set mainImageUrl = project.mainImage is defined and project.mainImage is not null 
-            ? uploadUrl('UPLOADS_PROJECTS', project.mainImage) 
-            : uploadUrl('UPLOADS_PROJECTS', defaultMainImage)
+        {% set thumbnailUrl = project.thumbnail is defined and project.thumbnail is not null 
+            ? uploadUrl('UPLOADS_PROJECTS_THUMB', project.thumbnail) 
+            : uploadUrl('UPLOADS_PROJECTS_THUMB', defaultThumbnail)
         %}
 
         <div class="oc-item">
@@ -40,11 +40,11 @@
 
                 <div class="portfolio-image">
                     <a href="{{ projectUrl }}">
-                        <img src="{{ mainImageUrl }}" alt="Open Gallery">
+                        <img src="{{ thumbnailUrl }}" alt="Open Gallery">
                     </a>
                     <div class="bg-overlay">
                         <div class="bg-overlay-content dark" data-hover-animate="fadeIn" data-hover-speed="350">
-                            <a href="{{ mainImageUrl }}" class="overlay-trigger-icon bg-light text-dark" data-hover-animate="fadeInDownSmall" data-hover-animate-out="fadeInUpSmall" data-hover-speed="350" data-lightbox="image">
+                            <a href="{{ thumbnailUrl }}" class="overlay-trigger-icon bg-light text-dark" data-hover-animate="fadeInDownSmall" data-hover-animate-out="fadeInUpSmall" data-hover-speed="350" data-lightbox="image">
                                 <i class="{{ zoomIcon }}"></i>
                             </a>
                             <a href="{{ projectUrl }}" class="overlay-trigger-icon bg-light text-dark" data-hover-animate="fadeInDownSmall" data-hover-animate-out="fadeInUpSmall" data-hover-speed="350">
