--- a/templates/coding_language/lessons.html.twig
+++ b/templates/coding_language/lessons.html.twig
@@ -12,7 +12,10 @@
     {label: 'Lessons', url: path('lessons')},
 	{label: codingLanguage.label, active: true}
 ] %}
-{% set collection_filters = categories %}
+{% set collection_filters = {
+    collection: categories,
+    showAllLabel: 'All categories' 
+} %}
 {% set collection_items = lessons %}
 
 
