--- a/templates/coding_language/projects.html.twig
+++ b/templates/coding_language/projects.html.twig
@@ -12,7 +12,10 @@
     {label: 'Portfolio', url: path('projects')},
 	{label: codingLanguage.label, active: true}
 ] %}
-{% set collection_filters = categories %}
+{% set collection_filters = {
+    collection: categories,
+    showAllLabel: 'All categories'
+} %}
 {% set collection_items = projects %}
 
 
@@ -29,7 +32,7 @@
 
 {% block content %}
 
-    {% if lessons is defined and lessons|length > 0 %}
+    {% if projects is defined and projects|length > 0 %}
         {{ parent() }}
         <div id="collection" class="portfolio portfolio-reveal row grid-container gutter-30" data-layout="fitRows">
             {% for projects in collection_items %}
