--- a/templates/_elements/collection-filters.html.twig
+++ b/templates/_elements/collection-filters.html.twig
@@ -10,6 +10,7 @@
 
 {# Prepare #}
 
+    {% set showAllLabel = filter.show is defined and showAllLabel is not null ? showAllLabel : 'Show All' %}
     {% set showRandomBtn = collection_filters_random is defined and collection_filters_random is not same as(false) ? true : false %}
 
 
@@ -18,8 +19,8 @@
 <div class="grid-filter-wrap">
 
     <ul class="grid-filter style-4" data-container="#collection">
-        <li class="activeFilter"><a href="#" data-filter="*">Show All</a></li>
-        {% for filter in filters %}
+        <li class="activeFilter"><a href="#" data-filter="*">{{ filters.showAllLabel }}</a></li>
+        {% for filter in filters.collection %}
             <li><a href="#" data-filter=".{{ filter.slug }}">{{ filter.label }}</a></li>
         {% endfor %}
     </ul>
