--- a/templates/post_category/index.html.twig
+++ b/templates/post_category/index.html.twig
@@ -26,7 +26,7 @@
 
 {% block content %}
 
-    {% if lessons is defined and lessons|length > 0 %}
+    {% if posts is defined and posts|length > 0 %}
         {{ parent() }}
         <div id="collection" class="row grid-container block-gallery-9">
             {% for post in posts %}
