--- a/templates/project_category/index.html.twig
+++ b/templates/project_category/index.html.twig
@@ -29,7 +29,7 @@
 
 {% block content %}
 
-    {% if lessons is defined and lessons|length > 0 %}
+    {% if projects is defined and projects|length > 0 %}
         {{ parent() }}
         <div id="collection" class="portfolio portfolio-reveal row grid-container gutter-30" data-layout="fitRows">
             {% for projects in collection_items %}
