shadow on collection item

--- a/templates/_elements/portfolio-collection-item.html.twig
+++ b/templates/_elements/portfolio-collection-item.html.twig
@@ -69,8 +69,8 @@
 
 {# Portfolio Collection Item ============================================================ #}
 
-<article class="portfolio-item col-md-4 col-sm-6 col-12{{ categoriesClasses }}">
-    <div class="grid-inner">
+<article class="portfolio-item pt-1 col-md-4 col-sm-6 col-12{{ categoriesClasses }}">
+    <div class="grid-inner shadow">
         <div class="portfolio-image">
 
             {% if isGallery %}
