--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -883,6 +883,7 @@ $grid-shuffle-size: 42px;
 $portfolio-item-min-height: 300px;
 $Portfolio_desc-padding: 20px 5px;
 $Portfolio_desc-title-size: 1.1rem;
+$portfolio-carousel-height: 200px;
 
 // Masonry Thumbs: 	;
 $masonry_thumbs-gutter: 1px;
