fix portfolio carousel item

--- a/templates/_elements/projects-carousel.html.twig
+++ b/templates/_elements/projects-carousel.html.twig
@@ -36,7 +36,7 @@
         %}
 
         <div class="oc-item">
-            <div class="portfolio-item no-min-height">
+            <div class="portfolio-item portfolio-carousel-item no-min-height">
 
                 <div class="portfolio-image">
                     <a href="{{ projectUrl }}">
