--- a/templates/_layout/project.html.twig
+++ b/templates/_layout/project.html.twig
@@ -94,11 +94,22 @@
 											{% endif %}											
 											
 											{% if project.technologies|length > 0 %}
-												<li><span><i class="icon-line-tool"></i>Technolog{% if project.technologies|length > 1 %}ies{% else %}y{% endif %}:</span>
+												<li><span><i class="icon-cubes"></i>Technolog{% if project.technologies|length > 1 %}ies{% else %}y{% endif %}:</span>
 												{% for technology in project.technologies %}
 													{% if technology is not same as(project.technologies|first) %} / {% endif %}
 													<a href="{{ technology.url }}" target="_blank">
 														{{ technology.label }}
+													</a>
+												{% endfor %}
+												</li>
+											{% endif %}
+
+											{% if project.tools|length > 0 %}
+												<li><span><i class="icon-line-tool"></i>Tool{% if project.tools|length > 1 %}s{% endif %}:</span>
+												{% for tool in project.tools %}
+													{% if tool is not same as(project.tools|first) %} / {% endif %}
+													<a href="{{ tool.url }}" target="_blank">
+														{{ tool.label }}
 													</a>
 												{% endfor %}
 												</li>
