added feature emebed videos on projects

--- a/assets/sass/_sliders.scss
+++ b/assets/sass/_sliders.scss
@@ -30,6 +30,10 @@
 	height: 100% !important;
 }
 
+.slide-video {
+	background-color: white;
+}
+
 
 .flex-container a:active,
 .flexslider a:active,
