--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,6 +52,7 @@
 
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="author" content="SemiColonWeb" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>{% block title %}{% endblock %}</title>
 
