--- a/assets/sass/shortcodes/_misc.scss
+++ b/assets/sass/shortcodes/_misc.scss
@@ -137,10 +137,11 @@ blockquote {
 
 .typed-cursor {
 	font-weight: 400;
+	color: black !important;
 }
 
-.text-rotater > .t-rotate > .animated {
-	display: inline-block;
+.text-rotater > .t-rotate {
+	display: inline-block !important;
 }
 
 
