--- a/templates/_elements/contact-button.html.twig
+++ b/templates/_elements/contact-button.html.twig
@@ -1,16 +1,25 @@
-{# 
-    Variables:
+{# Variables:
     - contactLink: Target url on click
     - contactLabel: Button label. Default: 'Contact Me'
+    - btnIcon: optionnal. Default: 'icon-line2-envelope' (icons list: https://themes.semicolonweb.com/html/canvas/icons.html)
     - contactLink: Target url onclick
     - socials: (optional)
         - slug: eg. 'facebook', 'twitter',...
         - link: eg. 'https://twitter.com/myname' (open a new tab: traget=_blank)
 #}
 
+{# Prepare #}
+
+    {% set btnIcon = btnIcon is defined ? btnIcon : 'icon-line2-envelope' %}
+
+{# Render #}
+
 <div class="d-flex align-items-center mt-4">
     <a href="{{ contactLink }}" class="button button-change button-large button-rounded nott fw-light m-0 overflow-hidden">
-        <span><i class="icon-line2-envelope"></i>{{ contactLabel is defined ? contactLabel : 'Contact us'}}</span>
+        <span>
+            {% if btnIcon is not null %}<i class="{{ btnIcon }}"></i>{% endif %}
+            {{ contactLabel is defined ? contactLabel : 'Contact us'}}
+        </span>
     </a>
     {% if socials is defined %}
         {% for social in socials %}
