--- a/templates/_elements/counter.html.twig
+++ b/templates/_elements/counter.html.twig
@@ -2,13 +2,12 @@
     <div class="counter counter-large fw-light">
         {{ before is defined ? before }}
         <span 
-            data-from="{{ from is defined ? from : 1 }}"
+            data-from="{{ from is defined and from is not null ? from : 1 }}"
             data-to="{{ to is defined ? to : 100 }}"
-            data-refresh-interval="{{ interval is defined ? interval : 50 }}"
-            data-speed="{{ speed is defined ? speed : 2000 }}">
-        </span>
-        {{ after is defined ? after }}
+            data-refresh-interval="{{ interval is defined and interval is not null ? interval : 50 }}"
+            data-speed="{{ speed is defined and speed is not null ? speed : 2000 }}">
+        </span>{{ after is defined and after is not null ? after }}
     </div>
     <h5>{{ title}}</h5>
-    <p class="text-muted mb-0 pb-5 border-bottom">{{ content }}</p>
+    <p class="text-muted mb-0 pb-5">{{ content }}</p>
 </div>
