--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,7 +16,18 @@
         class="slider-element min-vh-60 min-vh-md-100 include-header" 
         style="background: url('{{ asset('build/images/dots-1.png') }}') 100% 0 no-repeat; background-size: 60% auto"
     >
-        {% include "_sections/home/hero-slider.html.twig" %}
+        {% include "_sections/home/hero-slider.html.twig" with {
+			section: "Hello,",
+			title: {
+				before: "I am<br>", 
+				words:"a web developer.|a marketer.|an ecommerce expert.|a video editor.|a graphic designer.|a self-learner.", 
+			},
+			headline: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quasi quo ea magnam dignissimos quis obcaecati aut in.",
+			slides: [
+				{img: 'build/images/home/edouard.jpg'},
+				{img: 'build/images/home/edouard-nb.jpg'}
+			]
+		} %}
     </section>
 
 {% endblock %}
@@ -29,7 +40,7 @@
 			{# flip cards #}
 			{% include "_sections/home/flip-cards.html.twig" with {
 				section: 'Experience',
-				title: 'I have been taking photographs for the last 7 years.',
+				title: "I've been coding every single day for the last " ~ stats.daysOfCoding ~ " days.",
 				columns: 4,
 				parallax: { top: '-100px', bottom: '100px' },
 				removeVerticalMargins: true,
@@ -40,76 +51,15 @@
 			<div class="section bg-transparent">
 				<div class="container">
 					{% include "_elements/section-title.html.twig" with {
-						section: 'Some of Featured Pictures',
-						title: 'See what I Did.',
+						section: 'Projects',
+						title: 'A glimpse of what i do.',
 						offsetLeft: true,
 						content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur blanditiis saepe dolore tempora nihil praesentium dolorum unde, earum, nostrum odit?'
 					} %}
 
-					{% include "_elements/gallery-masonry-3d.html.twig" with { cards : [
-						{
-							img: asset('build/images/album/1.jpg'),
-							category: 'Travel',
-							title: 'Railway Station'
-						},{
-							img: asset('build/images/album/2.jpg'),
-							category: 'Travel',
-							title: 'Mt. Batur'
-						},{
-							img: asset('build/images/album/3.jpg'),
-							category: 'Travel',
-							title: 'Bali, Indonesia'
-						},{
-							img: asset('build/images/album/4.jpg'),
-							category: 'Wedding',
-							title: "Ms. Charle's Wedding"
-						},{
-							img: asset('build/images/album/5.jpg'),
-							category: 'Wedding',
-							title: 'Romantic Moments'
-						},{
-							img: asset('build/images/album/6.jpg'),
-							category: 'Travel',
-							title: 'Surfing on Sunset'
-						},{
-							img: asset('build/images/album/7.jpg'),
-							category: 'Candid',
-							title: 'Black & White'
-						},{
-							img: asset('build/images/album/8.jpg'),
-							category: 'Travel',
-							title: 'Reading Book'
-						},{
-							img: asset('build/images/album/9.jpg'),
-							category: 'Travel',
-							title: 'Little Flubby'
-						},{
-							img: asset('build/images/album/10.jpg'),
-							category: 'Portrait',
-							title: 'Model Shoot'
-						},{
-							img: asset('build/images/album/11.jpg'),
-							category: 'Fashion',
-							title: 'Beach Shoot'
-						},{
-							img: asset('build/images/album/12.jpg'),
-							category: 'Model',
-							title: 'Modelling Pics'
-						},{
-							img: asset('build/images/album/13.jpg'),
-							category: 'Travel',
-							title: 'Street Picture'
-						},{
-							img: asset('build/images/album/14.jpg'),
-							category: 'Street',
-							title: 'Budapest, Hungry'
-						},{
-							img: asset('build/images/album/15.jpg'),
-							category: 'Candid',
-							title: 'Street Picture'
-						}
-
-					] } %}
+					{% include "_elements/gallery-masonry-3d.html.twig" with { 
+						cards : featuredProjects
+					} %}
 
 					{% include "_elements/section-paragraph-left.html.twig" with {
 						title: 'See what I Did.',
@@ -123,7 +73,30 @@
 			</div>
 
 			{# counters #}
-			{% include "_sections/home/counters.html.twig" %}
+
+			{% include "_sections/home/counters.html.twig" with { counters: [
+				{
+					to: stats.daysOfCoding * 4,
+					title: "hours of coding",
+					content: '',
+					after: '+'
+				},
+				{
+					to: stats.languages.count,
+					title: "Mastered languages",
+					content: 'Including ' ~ stats.languages.list ~ '.'
+				},
+				{
+					to: stats.technologies.count,
+					title: "Frameworks and bundles",
+					content: stats.technologies.list
+				},
+				{
+					to: stats.githubRepositories|length,
+					title: "Projects on Github",
+					content: ''
+				}
+			] } %}
 			
 			{# clients #}
 			{% include "_sections/home/clients.html.twig" with {
